hand-on/manifest/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-node-prod-service
spec:
  selector:
    app: hello-node-prod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30012 
  type: NodePort
